Updates for Week 3

--- a/events.html
+++ b/events.html
@@ -8,13 +8,12 @@
 
 <body>
 	
-	<wrapper>
-	
 	<header>
 		<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
 	</header>
 	
 	<nav>
+	
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="meet.html">Meet the Animals</a></li>
@@ -23,51 +22,36 @@
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="links.html">Links</a></li>
 		</ul>
+		
 	</nav>
 
-<body>
+	<article>
 	
-	<header>
-		<h1></h1>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-			<li><a href="#"></a></li>
-		</ul>
-	</nav>
+	<hr />
 
-<article>
-	<h1>Upcoming Events</h1>
-	<p class="whatis">Stay tuned for more info on the reality show that Owen and Kiwi are starring in&excl;</p>
+		<h1>Upcoming Events</h1>
 	
-	<p class="whatis">Just finished shooting for the Canadian TV Show, "A Dog's Best Friend" for an episode in 2014&excl;</p>
+		<p>Stay tuned for more info on the reality show that Owen and Kiwi are starring in&excl;</p>
 	
-	<p class="whatis">Look for more info on the upcoming issue of National Geographic  featuring the article on exotic animals and picture of our animals&excl;</p>
-</article>
+		<p>Just finished shooting for the Canadian TV Show, "A Dog's Best Friend" for an episode in 2014&excl;</p>
+	
+		<p>Look for more info on the upcoming issue of National Geographic  featuring the article on exotic animals and picture of our animals&excl;</p>
+		
+	</article>
 
-<aside>
-</aside>
 
 	<footer>
+	
 		<H3>COME AND MEET THE ANIMALS IN PERSON</H3>
 		
-		<p class="phone">(Please call 407-383-6766 to schedule your visit)</p>
+		<p>(Please call 407-383-6766 to schedule your visit)<br><br>
+		Animals include but are not limited to:<br>
+		Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,<br>
+		Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl;</p>
 		
-		<p class="footnotes">Animals include but are not limited to:</p>
+		<p class="copyright">Copyright&copy; 2013</p>
 		
-		<p class="footnotes">Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,</p>
-		
-		<p class="footnotes">Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl; </p>
-		
-		<p>Copyright&copy; 2013</p>
 	</footer>
-
-	</wrapper>
 
 </body>
 </html>
