--- a/gallery.html
+++ b/gallery.html
@@ -8,13 +8,12 @@
 
 <body>
 	
-	<wrapper>
-	
 	<header>
 		<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
 	</header>
 	
 	<nav>
+	
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="meet.html">Meet the Animals</a></li>
@@ -23,41 +22,43 @@
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="links.html">Links</a></li>
 		</ul>
+		
 	</nav>
 
-<article>
-<h1>Animal Gallery</h1>
-
-<p class="announcements">Enjoy these pictures from the experience&excl;</p>
-
-<ul>
-	<li><a class="pics" href="images/gallery/Lemurs.jpg" title="People with Lemurs"><img src="images/gallery/Lemurs.jpg" alt="People with Lemurs"></a></li>
-	<li><a class="pics" href="images/gallery/Jasper_and_Jeff.jpg" title="Jasper and Jeff"><img src="images/gallery/Jasper_and_Jeff.jpg" alt="Jasper and Jeff"></li>
-	<li><a class="pics" href="images/gallery/Roo-in-sweater-2.jpg" title="Kangaroo in sweater"><img src="images/gallery/Roo-in-sweater-2.jpg" alt="Kangaroo in sweater"></a></li>
-	<li><a class="pics" href="images/gallery/Donkey-and-JR.jpg" title="Donkey and JR"><img src="images/gallery/Donkey-and-JR.jpg" alt="Donkey and JR"></a></li>
-	<li><a class="pics" href="images/gallery/Roo-and-horse.jpg" title="Roo and Horse"><img src="images/gallery/Roo-and-horse.jpg" alt="Roo and Horse"></a></li>
-	</ul>
+	<article>
 	
-</article>
+	<hr />
+	
+		<h1>Animal Gallery</h1>
 
-<aside>
-</aside>
+		<p class="announcements">Enjoy these pictures from the experience&excl;</p>
+
+		<ul>
+			<li><a class="pics" href="images/gallery/lemurs.jpg" title="People with Lemurs"><img src="images/gallery/lemurs.jpg" alt="People with Lemurs"></a></li>
+			<li><a class="pics" href="images/gallery/jasper_and_jeff.jpg" title="Jasper and Jeff"><img src="images/gallery/jasper_and_jeff.jpg" alt="Jasper and Jeff"></li>
+			<li><a class="pics" href="images/gallery/roo_in_sweater2.jpg" title="Kangaroo in sweater"><img src="images/gallery/roo_in_sweater2.jpg" alt="Kangaroo in sweater"></a></li>
+		</ul>
+		
+		<ul>
+			<li><a class="pics" href="images/gallery/donkey_and_jr.jpg" title="Donkey and JR"><img src="images/gallery/donkey_and_jr.jpg" alt="Donkey and JR"></a></li>
+			<li><a class="pics" href="images/gallery/roo_and_horse.jpg" title="Roo and Horse"><img src="images/gallery/roo_and_horse.jpg" alt="Roo and Horse"></a></li>
+			<a class="pics" href="images/gallery/jeff_lamb.jpg" title="Jeff and Lamb"><img src="images/gallery/jeff_lamb.jpg" alt="Jeff and Lamb"></a></li>
+		</ul>
+	
+	</article>
 
 	<footer>
+	
 		<H3>COME AND MEET THE ANIMALS IN PERSON</H3>
 		
-		<p class="phone">(Please call 407-383-6766 to schedule your visit)</p>
+		<p>(Please call 407-383-6766 to schedule your visit)<br><br>
+		Animals include but are not limited to:<br>
+		Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,<br>
+		Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl;</p>
 		
-		<p class="footnotes">Animals include but are not limited to:</p>
+		<p class="copyright">Copyright&copy; 2013</p>
 		
-		<p class="footnotes">Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,</p>
-		
-		<p class="footnotes">Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl; </p>
-		
-		<p>Copyright&copy; 2013</p>
 	</footer>
-
-	</wrapper>
 
 </body>
 </html>
