--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 
 <body>
 	
-	<wrapper>
-	
 	<header>
 		<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
 	</header>
 	
 	<nav>
+	
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="meet.html">Meet the Animals</a></li>
@@ -23,54 +22,61 @@
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="links.html">Links</a></li>
 		</ul>
+		
 	</nav>
 
 	<article>
+	
+	<hr />
+	
 		<h1>What is the Exotic Experience</h1>
-		<p class="whatis">Come enjoy the company of lemurs, kangaroos, deer, a kinkajou and more! This is an individually-scheduled, personal, hands-on encounter with animals you normally only get to view through bars and cages. The animals are tame and love human interaction.</p>
+		
+		<p>Come enjoy the company of lemurs, kangaroos, deer, a kinkajou and more! This is an individually-scheduled, personal, hands-on encounter with animals you normally only get to view through bars and cages. The animals are tame and love human interaction.</p>
+		
 		<ul>
-	   		<li><a class="animals" href="images/home_page/lemur.jpg" title="lemur"><img src="images/home_page/lemur.jpg" alt="lemur" width="150" height="217"></a></li>
-	   		<li><a class="animals" href="images/home_page/lemur-2.jpg" title="lemur-2"><img src="images/home_page/lemur-2.jpg" alt="lemur-2" width="150" height="217"></a></li>
-	   		<li><a class="animals" href="images/home_page/Zebra_with_donkey.jpg" title="zebra and donkey"><img src="images/home_page/Zebra_with_donkey.jpg" alt="zebra and donkey" width="150" height="217"></a></li>
-	   		<li><a class="animals" href="images/home_page/Kangaroo_sweater.jpg" title="kangaroo in a sweater"><img src="images/home_page/kangaroo_sweater.jpg" alt="kangaroo in a sweater" width="150" height="217"></a></li>
-	   		<li><a class="animals" href="images/home_page/kangaroo_closeup.jpg" title="kangaroo closeup"><img src="images/home_page/kangaroo_closeup.jpg" alt="kangaroo closeup" width="150" height="217"></a></li>
+	   		<li><a class="animals" href="images/home_page/lemur.jpg" title="lemur"><img src="images/home_page/lemur.jpg" alt="lemur"></a></li>
+	   		<li><a class="animals" href="images/home_page/lemur_2.jpg" title="lemur 2"><img src="images/home_page/lemur_2.jpg" alt="lemur 2"></a></li>
+	   		<li><a class="animals" href="images/home_page/zebra_with_donkey.jpg" title="zebra and donkey"><img src="images/home_page/Zebra_with_donkey.jpg" alt="zebra and donkey"></a></li>
+	   		<li><a class="animals" href="images/home_page/Kangaroo_sweater.jpg" title="kangaroo in a sweater"><img src="images/home_page/kangaroo_sweater.jpg" alt="kangaroo in a sweater"></a></li>
+	   		<li><a class="animals" href="images/home_page/kangaroo_closeup.jpg" title="kangaroo closeup"><img src="images/home_page/kangaroo_closeup.jpg" alt="kangaroo closeup"></a></li>
 		</ul>
-		<p class="whatis">We also host birthday parties, events, field trips and, on occasion, do off-property appearances, depending on who is available to travel.   
+		
+		<p>We also host birthday parties, events, field trips and, on occasion, do off-property appearances, depending on who is available to travel.   
 		Learn about our endangered species and what we can do to help with conservation!</p>
 		
-		<p class="whatis">Check out our latest youtube videos below, as seen on
+		<p>Check out our latest youtube videos below, as seen on
 		 MSN, Animal Planet, Inside Edition, Good Morning America, Right This Minute and Red Eye!</p>
+		 
 	</article>
 
 	<aside>
+	
 		<h2>Announcements</h2>
 		
-		<p class="announcements">We are trying to raise enough money to add a baby brown lemur into the family at Exotic Experience!</p>
+		<p>We are trying to raise enough money to add a baby brown lemur into the family at Exotic Experience!</p>
 		
-		<p class="announcements">Please share with your friends and family, I appreciate any help you can give! Thank you Thank you Thank you!</p>
+		<p>Please share with your friends and family, I appreciate any help you can give! Thank you Thank you Thank you!</p>
 		
 		<p><a class="donate" href="http://www.gofundme.com/2h5m6k">Donate</a></p>
 		
 		<p class="charlie">Thanks to all of you--Charlie, the baby brown lemur, is now at Exotic Experience&#33;</p>
 		
-		<img class="charlie" src="images/home_page/Charlie-lemur.jpg" title="Charlie"><img src="images/home_page/Charlie_lemur.jpg" width="500" height="332">
+		<img class="charlie" src="images/home_page/Charlie_lemur.jpg" title="Charlie" width="500" height="332">
+		
 	</aside>
 
 	<footer>
+	
 		<H3>COME AND MEET THE ANIMALS IN PERSON</H3>
 		
-		<p class="phone">(Please call 407-383-6766 to schedule your visit)</p>
+		<p>(Please call 407-383-6766 to schedule your visit)<br><br>
+		Animals include but are not limited to:<br>
+		Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,<br>
+		Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl;</p>
 		
-		<p class="footnotes">Animals include but are not limited to:</p>
+		<p class="copyright">Copyright&copy; 2013</p>
 		
-		<p class="footnotes">Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,</p>
-		
-		<p class="footnotes">Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl; </p>
-		
-		<p>Copyright&copy; 2013</p>
 	</footer>
-
-	</wrapper>
 
 </body>
 </html>
