--- a/links.html
+++ b/links.html
@@ -6,62 +6,92 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+	<body>
 	
-	<wrapper>
+		<header>
+			<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
+		</header>
 	
-	<header>
-		<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
-	</header>
+		<nav>
 	
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="meet.html">Meet the Animals</a></li>
-			<li><a href="events.html">Upcoming Events</a></li>
-			<li><a href="products.html">Products</a></li>
-			<li><a href="gallery.html">Gallery</a></li>
-			<li><a href="links.html">Links</a></li>
-		</ul>
-	</nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="meet.html">Meet the Animals</a></li>
+				<li><a href="events.html">Upcoming Events</a></li>
+				<li><a href="products.html">Products</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="links.html">Links</a></li>
+			</ul>
+		
+		</nav>
+	
+		<article>
+		
+		<hr />
+		
+			<h1>Links and Contacts</h1>
+		
+		</article>
+	
+		<article class="contacteae">
+		
+			<h3>Leslie-Ann Rush</h3>
 
-<body>
+			<p><img src="images/links/leslie_rush.gif" title="leslie" width="142" height="151"></p>
+		
+			<p>(407)383-6766<br />
+			<a class="email" href="mailto:lesurt99@aol.com" target="_top">lesurt99@aol.com</a></p>
+		
+		
+		</article>
+
+		<aside class="contactform">
 	
-	<article>
-		<h1>Links and Contacts</h1>
-
-		<p><img class="Tshirt" src="images/links/partner_up.gif" alt="Partner Up"></p>
+		<form method="post" action="mailto:lesurt99@aol.com">
+	
+	    	<div>
+		   		<label for="name_first">First Name</label>
+	        	<br />	
+		   		<input type="text" name="name_first" id="name_first" />
+	    	</div>
+	    
+	    	<div>
+		  		<label for="name_last">Last Name</label>
+		  		<br/>
+	       		<input type="text" name="name_last" id="name_last" />
+	    	</div>
 		
-		<p><a class="donate" href="http://www.partnerup.com/">Partner Up</a></p>
-	</article>
-
-	<aside>
-		<p><a class="donate" href="https://www.facebook.com/#!/pages/Exotic-Experience/203469063013499" title="facebook"><img src="images/links/facebook_badge.gif" alt="facebook"></a></p>
+	    	<div>
+		   		<label for="email">Email Address</label>
+	       		<br />
+		   		<input type="text" name="email" id="email" />
+	    	</div>
 		
-		<p><img class="charlie" src="images/links/Leslie-rush.gif" title="leslie"></p>
-		
-		<h3>Leslie-Ann Rush</h3>
-		
-		<p class="footnotes">(407)383-6766</p>
-		
-		<p class="footnotes"><a class="email" href="mailto:lesurt99@aol.com" target="_top">lesurt99@aol.com</a></p>
+	    	<div>
+		   		<label for="comments">Comments<br />
+	       		<textarea name="comments" id="comments">Enter text here...</textarea><br />
+	    	</div>
+	    	
+	    	<div>
+		   		<button type="submit" name="submit" class="button">Send</button>
+	    	</div>
+	
+	 	</form>
+	
 	</aside>
 
 	<footer>
+	
 		<H3>COME AND MEET THE ANIMALS IN PERSON</H3>
 		
-		<p class="phone">(Please call 407-383-6766 to schedule your visit)</p>
+		<p>(Please call 407-383-6766 to schedule your visit)<br><br>
+		Animals include but are not limited to:<br>
+		Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,<br>
+		Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl;</p>
 		
-		<p class="footnotes">Animals include but are not limited to:</p>
+		<p class="copyright">Copyright&copy; 2013</p>
 		
-		<p class="footnotes">Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,</p>
-		
-		<p class="footnotes">Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl; </p>
-		
-		<p>Copyright&copy; 2013</p>
 	</footer>
-
-	</wrapper>
 
 </body>
 </html>
