--- a/meet.html
+++ b/meet.html
@@ -26,43 +26,45 @@
 	</nav>
 	
 	<article>
+	
+	<hr />
+	
 		<h1>Meet the Animals</h1>
 		
 		<p class="announcements">(Click on each image to learn more about each animal)</p>
 		
 		<ul>
-			<li><a class="meet" href="images/meet_page/dozer.jpg" title="dozer"><img src="images/meet_page/dozer.jpg" alt="dozer"></a></li>
-			<li><a class="meet" href="images/meet_page/KC-and-Bug.jpg" title="KC and Bug"><img src="images/meet_page/KC-and-Bug.jpg" alt="KC and Bug"></a></li>
+			<li><a class="meet" href="images/meet_page/dozer.jpg" title="dozer" height="254"><img src="images/meet_page/dozer.jpg" alt="dozer"></a></li>
+			<li><a class="meet" href="images/meet_page/kc_and_bug.jpg" title="KC and Bug" height="254"><img src="images/meet_page/kc_and_bug.jpg" alt="KC and Bug"></a></li>
 			<li><a class="meet" href="images/meet_page/rooster.jpg" title="rooster"><img src="images/meet_page/rooster.jpg" alt="rooster"></a></li>
 			<li><a class="meet" href="images/meet_page/keeva.jpg" title="keeva"><img src="images/meet_page/keeva.jpg" alt="keeva"></a></li>
 			<li><a class="meet" href="images/meet_page/lovebug.jpg" title="lovebug"><img src="images/meet_page/lovebug.jpg" alt="lovebug"></a></li>
 			<li><a class="meet" href="images/meet_page/liam.jpg" title="liam"><img src="images/meet_page/liam.jpg" alt="liam"></a></li>
+		</ul>
+		
+		<ul>
 			<li><a class="meet" href="images/meet_page/kiwi.jpg" title="kiwi"><img src="images/meet_page/kiwi.jpg" alt="kiwi"></a></li>
 			<li><a class="meet" href="images/meet_page/Pig_pig.jpg" title="pig pig"><img src="images/meet_page/Pig_pig.jpg" alt="pig pig"></a></li>
 			<li><a class="meet" href="images/meet_page/poppi1.jpg" title="poppi"><img src="images/meet_page/poppi1.jpg" alt="poppi"></a></li>
 		</ul>
 		
 		<p class="announcements">We also have Jeffery the mini donkey, Sam the mini horse, some bunnies, tortoises and Gypsy Horses&copy;</p>
+		
 	</article>
 
-<aside>
-</aside>
 
 	<footer>
+	
 		<H3>COME AND MEET THE ANIMALS IN PERSON</H3>
 		
-		<p class="phone">(Please call 407-383-6766 to schedule your visit)</p>
+		<p>(Please call 407-383-6766 to schedule your visit)<br><br>
+		Animals include but are not limited to:<br>
+		Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,<br>
+		Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl;</p>
 		
-		<p class="footnotes">Animals include but are not limited to:</p>
+		<p class="copyright">Copyright&copy; 2013</p>
 		
-		<p class="footnotes">Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,</p>
-		
-		<p class="footnotes">Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl; </p>
-		
-		<p>Copyright&copy; 2013</p>
 	</footer>
-
-	</wrapper>
 
 </body>
 </html>
