--- a/products.html
+++ b/products.html
@@ -8,13 +8,12 @@
 
 <body>
 	
-	<wrapper>
-	
 	<header>
 		<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
 	</header>
 	
 	<nav>
+	
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="meet.html">Meet the Animals</a></li>
@@ -23,12 +22,16 @@
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="links.html">Links</a></li>
 		</ul>
+		
 	</nav>
 
 	<article>
+	
+	<hr />
+	
 		<h1>Now selling T-shirts with your favorite Exotic Experience Animals&excl;</h1>
 		
-		<p><img class="Tshirt" src="images/products/Tshirt-front.gif" title="T-shirt Front" alt="T-Shirt Front">
+		<p><img class="Tshirt" src="images/products/Tshirt-front.gif" title="T-shirt Front" alt="T-Shirt Front"></p>
 		
 		<p class="announcements">(Choose between Liam, Lovebug and Poppi for the back)</p>
 		
@@ -40,29 +43,24 @@
 		
 		<h2>Shirts are $15.50 each plus shipping.</h2>
 		
-		<p class="footnotes">We accept Paypal or credit cards--please call 407-383-6766 to place an order&excl;</p>
+		<p>We accept Paypal or credit cards--please call 407-383-6766 to place an order&excl;</p>
 		
 		<h4>Gift Cards Also Available -  Call for Details</h4>
+		
 	</article>
 
-	<aside>
-	</aside>
-
 	<footer>
+	
 		<H3>COME AND MEET THE ANIMALS IN PERSON</H3>
 		
-		<p class="phone">(Please call 407-383-6766 to schedule your visit)</p>
+		<p>(Please call 407-383-6766 to schedule your visit)<br><br>
+		Animals include but are not limited to:<br>
+		Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,<br>
+		Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl;</p>
 		
-		<p class="footnotes">Animals include but are not limited to:</p>
+		<p class="copyright">Copyright&copy; 2013</p>
 		
-		<p class="footnotes">Eastern Gray and Western Gray Kangaroos, Ring-tail and Ruffed Lemurs,</p>
-		
-		<p class="footnotes">Kinkajou, Muntjac Deer, Pot-Bellied Pig, Bunnies, Mini Horse and Donkey, Gypsy Horses and more&excl; </p>
-		
-		<p>Copyright&copy; 2013</p>
 	</footer>
-
-	</wrapper>
 
 </body>
 </html>
