--- a/links.html
+++ b/links.html
@@ -29,13 +29,13 @@
 		
 		<hr />
 		
-			<h1>Links and Contacts</h1>
+			<h1 class="contactheaders">Links and Contacts</h1>
 		
 		</article>
 	
 		<article class="contacteae">
 		
-			<h3>Leslie-Ann Rush</h3>
+			<h3 class="contactheaders">Leslie-Ann Rush</h3>
 
 			<p><img src="images/links/leslie_rush.gif" title="leslie" width="142" height="151"></p>
 		
