--- a/links.html
+++ b/links.html
@@ -6,22 +6,22 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 
-	<body>
+<body>
 	
-		<header>
-			<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
-		</header>
+	<header>
+		<a class="logo" href="index.html"><img src="images/ee-banner.jpg" alt="logo"></a>
+	</header>
 	
-		<nav>
+	<nav>
 	
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="meet.html">Meet the Animals</a></li>
-				<li><a href="events.html">Upcoming Events</a></li>
-				<li><a href="products.html">Products</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="links.html">Links</a></li>
-			</ul>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="meet.html">Meet the Animals</a></li>
+			<li><a href="events.html">Upcoming Events</a></li>
+			<li><a href="products.html">Products</a></li>
+			<li><a href="gallery.html">Gallery</a></li>
+			<li><a href="links.html">Links</a></li>
+		</ul>
 		
 		</nav>
 	
