--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<header>
-		<img src="images/ee-banner.jpg" alt="logo" width="299" height="112.5" />
+		<a class="logo" href="index.html"><img src="images/ee-banner.jpg" alt="logo"></a>
 	</header>
 	
 	<nav>
